# Article-Fake-Reality-Checker

./: CNAME  README.md  package-lock.json  package.json  parse_colors.cjs  tailwind.config.js
.kiro/specs/ai-accuracy-improvement/: bugfix.md
architechture/: architechture.md  tree.txt  tree2.txt
backend/: .gitignore  README.md
backend/node-gateway/: .env.example  backend-node.md  package-lock.json  package.json
backend/node-gateway/src/: app.js  server.js
backend/node-gateway/src/config/: db.js  passport.js
backend/node-gateway/src/controllers/: auth.controller.js  fraud.controller.js  guest.controller.js  sse.controller.js  user.controller.js
backend/node-gateway/src/middlewares/: auth.middleware.js  errorHandler.js  sanitize.middleware.js  validate.middleware.js
backend/node-gateway/src/models/: BlacklistedToken.model.js  FraudReport.model.js  GuestSession.model.js  User.model.js  VerificationHistory.model.js  VerificationLedger.model.js
backend/node-gateway/src/utils/: jwt.js  (+3 more)
backend/python-engine/: .env.example  backend-python.md  diagnose.py  pyproject.toml  requirements.txt  run.py
backend/python-engine/app/: __init__.py  config.py  main.py
backend/python-engine/app/routes/: __init__.py  detection.py  image_sse.py  sse.py
backend/python-engine/app/schemas/: __init__.py  detection.py  image_detection.py
backend/python-engine/app/services/: __init__.py  analyst.py  detector.py  image_analyzer.py  reader.py  scout.py
backend/python-engine/load_checker/: claims_data.json  load.checker.py
backend/python-engine/models/: .gitkeep
frontend/: .env  .env.example  color-replace.cjs  frontend.md  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.tsx  index.css  src.rar
frontend/src/components/: ArchitectureSection.tsx  Footer.tsx  FraudDetectionLoading.tsx  HeroSection.tsx  Navbar.tsx  ResultsDashboard.tsx  frauddetection.tsx  index.ts
frontend/src/context/: AuthContext.tsx
frontend/src/pages/: DashboardPage.tsx  DocumentationPage.tsx  ForgotPasswordPage.tsx  HistoryPage.tsx  HowItWorksPage.tsx  LoginPage.tsx  OAuthSuccessPage.tsx  ProfilePage.tsx  RegisterPage.tsx  ResetPasswordPage.tsx  SavedEvidencePage.tsx  SettingsPage.tsx  VerifyPage.tsx
frontend/src/services/: api.ts
src/: App.jsx  index.css
src/components/: TopNavBar.jsx
src/components/ui/: DragDropZone.jsx  FeatureCard.jsx  HistoryCard.jsx  InputGroup.jsx  ProcessStepCard.jsx  SocialLoginButton.jsx  SourceCard.jsx  StatCard.jsx  StepCard.jsx  TabNavigation.jsx
src/pages/: AboutTruthLens.jsx  LandingPage.jsx  SignIn.jsx  UserDashboard.jsx  VerificationPage.jsx  VerificationResults.jsx
(+12 files in other folders)
