[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

# ─────────────────────────────────────────────
#  Project metadata
# ─────────────────────────────────────────────
[project]
name = "verifi-python-engine"
version = "1.0.0"
description = "Agentic AI fact-checking microservice for the Verifi* platform"
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "Joy",      github = "https://github.com/Joy-S-07" },
  { name = "Shubhadip",github = "https://github.com/Shubhadip-Codes" },
  { name = "Aranya",   github = "https://github.com/AKr3106" },
  { name = "Sayantika", github = "https://github.com/SayantikaBera-05" },
]
license = { text = "MIT" }
keywords = ["fact-checking", "AI", "fastapi", "openrouter", "llama3", "misinformation"]

# Runtime dependencies (mirrors requirements.txt)
dependencies = [
  "fastapi>=0.111.0",
  "uvicorn[standard]>=0.30.0",
  "python-dotenv>=1.0.0",
  "httpx>=0.27.0",
  "openai>=1.0.0",
  "pydantic>=2.7.0",
  "pydantic-settings>=2.3.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0",
  "pytest-asyncio>=0.23.0",
  "httpx>=0.27.0",   # also used as AsyncClient in tests
  "ruff>=0.5.0",
  "mypy>=1.10.0",
]

# ─────────────────────────────────────────────
#  Entry point
# ─────────────────────────────────────────────
[project.scripts]
verifi-engine = "run:main"

# ─────────────────────────────────────────────
#  Tool – Ruff (linter + formatter)
# ─────────────────────────────────────────────
[tool.ruff]
target-version = "py310"
line-length = 100
src = ["backend/python-engine"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM"]
ignore  = ["E501"]   # line length handled by formatter

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# ─────────────────────────────────────────────
#  Tool – Mypy (type checking)
# ─────────────────────────────────────────────
[tool.mypy]
python_version = "3.10"
strict = true
ignore_missing_imports = true
plugins = ["pydantic.mypy"]

# ─────────────────────────────────────────────
#  Tool – Pytest
# ─────────────────────────────────────────────
[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
log_cli = true
log_cli_level = "INFO"

# ─────────────────────────────────────────────
#  Tool – Coverage
# ─────────────────────────────────────────────
[tool.coverage.run]
source = ["."]
omit  = ["tests/*", "venv/*", ".venv/*"]

[tool.coverage.report]
show_missing = true
skip_covered = false
